# civicu_app

./: .coveragerc  .gitignore  .travis.yml  README.md  README.rst  manage.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
Labeler/: pip-selfcheck.json
civicu_app/: bot.py  settings.py  skeleton.py  urls.py  wsgi.py
docs/: Makefile  conf.py  index.rst  research.md
label/: pip-selfcheck.json
labeler/: admin.py  admin_auto.py  apps.py  experiment.py  forms.py  models.py  serializers.py  tests.py  trainer.py  urls.py  views.py  yolo.py
labeler/fixtures/: labeler_test_data.json
labeler/migrations/: 0001_initial.py  0002_image_file.py  0003_auto_20170803_2247.py  0004_auto_20170803_2308.py  0005_auto_20170804_0802.py  0006_auto_20170804_0923.py  0007_auto_20170821_1733.py  0008_auto_20170823_1618.py  0009_auto_20170824_1704.py  0010_auto_20170829_0758.py  0011_auto_20171126_1610.py  0012_auto_20171127_2335.py  0013_auto_20171130_1711.py
labeler/templates/: base.html
labeler/templates/labeler/: form_file_upload.html  index.html
labeler/templates/labeler/static/: index.html
labeler_site/: bot.py  image_info.py  settings.py  urls.py  wsgi.py
scripts/: delpyc
tests/: conftest.py  test_bot.py  test_skeleton.py  travis_install.sh
